@@ -92,6 +92,10 @@ LINK32=link.exe
 
 SOURCE=.\sample.cpp
 # End Source File
+# Begin Source File
+
+SOURCE=.\sample.def
+# End Source File
 # End Group
 # Begin Group "Header Files"
 
